--- a/OS/README
+++ b/OS/README
@@ -1,23 +1,14 @@
 /*
-	 This file is part of the BoneClamp Project
+	 -------------------------------------------------------------------------
+
+	 This file is part of the BoneClamp Data Conversion and Processing System
 	 Copyright (C) 2013 BoneClamp
 
-	 This program is free software: you can redistribute it and/or modify
-	 it under the terms of the GNU General Public License as published by	
-	 the Free Software Foundation, either version 3 of the License, or	
-	 (at your option) any later version.					
+	 -------------------------------------------------------------------------
 
-	 This program is distributed in the hope that it will be useful,		
-	 but WITHOUT ANY WARRANTY; without even the implied warranty of		
-	 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the		
-	 GNU General Public License for more details.				
+	Filename: README for BoneClamp OS
 
-	 You should have received a copy of the GNU General Public License	
-	 along with this program.  If not, see http://www.gnu.org/licenses/	
+	To the extent possible under law, the author(s) have dedicated all copyright and related and neighboring rights to this software to the public domain worldwide. This software is distributed without any warranty.
 
-	 Created by Yogi Patel on February 2013.					
-	 Copyright (c) 2013 Yogi Patel. [yapatel@gatech.edu]			
-	 All rights reserved.							
- */	
-
-BuildRoot Directory for custom build-root based OS
+	You should have received a copy of the CC Public Domain Dedication along with this software. If not, see <http://creativecommons.org/licenses/by-sa/3.0/legalcode>.
+ */
